--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
     "tests"
   ],
   "dependencies": {
-    "dojo": "~1.10.4"
+    "dojo": "~1.10.4",
+    "dijit": "~1.10.4",
+    "dojox": "~1.10.4",
+    "dojo-util": "~1.10.4"
   }
 }
